# claude-agentic-mastery

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  GETTING_STARTED.md  PROGRESS.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  README.md  TODO.md  VERIFICATION.md  pyproject.toml
.claude/: settings.json
.claude/agents/: entity-builder.md
.claude/hooks/: log-commands.sh  prompt-reminder.py  session-start.sh
.claude/skills/game-artist/: KENNEY_CATALOG.md  SKILL.md  STYLE_GUIDE.md
.claude/skills/game-artist/templates/: pollinations_prompts.md
.claude/skills/python-testing/: EXAMPLES.md
.claude/skills/python-testing/templates/: conftest_example.txt  test_template.txt
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
SESSION_GUIDES/: SESSION_01.md  SESSION_02.md
scripts/: README.md  remove_background.py  remove_background_local.py  sprite_preprocess.py
src/: config.py  game.py  game_state.py  logger.py  main.py  sound.py  utils.py
src/entities/: base_zombie.py  player.py  powerup.py  projectile.py  zombie.py  zombie_fast.py  zombie_tank.py
tests/: __init__.py  conftest.py  test_config.py  test_entities.py  test_game.py  test_powerup.py  test_wave_system.py
tests/entities/: __init__.py  test_player.py  test_zombie.py
